--- a/hermes_server/package.json
+++ b/hermes_server/package.json
@@ -5,9 +5,11 @@
     "dev": "npx nodemon"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "nodemon": "^2.0.15",
