--- a/hermes_client/package.json
+++ b/hermes_client/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.26.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
