--- a/hermes_client/.env.production
+++ b/hermes_client/.env.production
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_hermes_api_url=https://hermes-server.vercel.app/
-NEXT_PUBLIC_hermes_ws_url=//hermes-server.vercel.app/
+NEXT_PUBLIC_hermes_api_url=https://boiling-hamlet-29617.herokuapp.com/
